--- a/ono-tebe-nado/index.html
+++ b/ono-tebe-nado/index.html
@@ -5,6 +5,247 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
+
+    <link rel="stylesheet" href="./fonts/fonts.css" />
+    <link rel="stylesheet" href="./styles/global.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="./styles/header-style.css" />
+    <link rel="stylesheet" href="./styles/main-content-style.css" />
+    <link rel="stylesheet" href="./styles/footer-style.css" />
   </head>
-  <body></body>
+
+  <body>
+    <header class="header">
+      <nav class="menu">
+        <ul class="menu__links-list">
+          <li class="menu__links-list-item">
+            <a href="#" class="menu__link menu__link_active">главная</a>
+          </li>
+          <li class="menu__links-list-item">
+            <a href="#section_lots" class="menu__link">посмотреть лоты</a>
+          </li>
+          <li class="menu__links-list-item">
+            <a href="#section_about" class="menu__link">об аукционе</a>
+          </li>
+        </ul>
+      </nav>
+
+      <a href="#" class="header__logo">
+        <img
+          class="header__logo-image"
+          alt="изображение логотипа"
+          src="./images/logo-black.svg"
+        />
+      </a>
+
+      <div class="contacts-list">
+        <a href="tel:+99995555555" class="contacts-list-item"
+          >+9 999 555 5555</a
+        >
+        <br />
+        <a href="mailto:info@sobaka.ge" class="contacts-list-item"
+          >info@sobaka.ge</a
+        >
+        <br />
+        <address class="contacts-list-item contacts__address header__address">
+          наб. Принсенграхт 263-265, Амстердам
+        </address>
+      </div>
+    </header>
+
+    <main>
+      <section class="cover">
+        <div class="overlay"></div>
+
+        <h1 class="cover-title">
+          <span class="aligned-text"
+            >о<span class="letter-spacing-extended">но</span>
+          </span>
+
+          <span class="aligned-text aligned-text_center"
+            >те<span class="letter-spacing-extended">бе</span>
+          </span>
+
+          <span class="aligned-text aligned-text_right">
+            <span class="letter-spacing-extended">н</span>ад<span
+              class="no-letter-spacing"
+              >о</span
+            >
+          </span>
+        </h1>
+
+        <div class="cover__description">
+          <span class="cover__description-text"
+            >Аукцион вещей, в которые никто не верил</span
+          >
+          <button class="bet-button">Сделать ставку</button>
+        </div>
+      </section>
+
+      <section id="section_lots" class="section section__lots">
+        <h2 class="section__lots-heading">Лоты</h2>
+
+        <ul class="section__lots-card-list">
+          <li class="section__lots-card-list-item">
+            <a href="#" class="card-link">
+              <article class="card card_type_film">
+                <div class="overlay"></div>
+
+                <div class="card-content">
+                  <h3 class="card-content__title">
+                    Фильм режиссёра, который бросил киношколу
+                  </h3>
+
+                  <p class="card-content__text">
+                    Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
+                    ставка, если бы вы не знали, что режиссёр — Пол Томас
+                    Андерсон?
+                  </p>
+                </div>
+              </article>
+            </a>
+          </li>
+
+          <li class="section__lots-card-list-item">
+            <a href="#" class="card-link">
+              <article class="card card_type_book">
+                <div class="overlay"></div>
+
+                <div class="card-content">
+                  <h3 class="card-content__title">
+                    Книга, где описан один скучный день из жизни рекламного
+                    агента
+                  </h3>
+
+                  <p class="card-content__text">
+                    Объёмом почти в тысячу страниц. Иногда без знаков препинания
+                    и с переходами на древнеанглийский. В ней одновременно
+                    рассказывается о 16 июня 1904 года и об истории литературы,
+                    начиная с античных времён. И это всё накладывается на
+                    эпическую поэму Гомера. Сколько бы вы поставили на «Улисса»
+                    Джеймса Джойса?
+                  </p>
+                </div>
+              </article>
+            </a>
+          </li>
+
+          <li class="section__lots-card-list-item">
+            <a href="#" class="card-link">
+              <article class="card card_type_picture">
+                <div class="overlay"></div>
+
+                <div class="card-content">
+                  <h3 class="card-content__title">
+                    Картина, которую повторит даже 5-летний сын маминой подруги
+                  </h3>
+
+                  <p class="card-content__text">
+                    Ну действительно, там линия, тут кружочек, а здесь и вовсе
+                    что-то похожее на инфузорию-туфельку. Никаких полей, лесов,
+                    котиков… Сколько бы вы на такое поставили, если бы не знали,
+                    что это — одна из революционных работ Кандинского?
+                  </p>
+                </div>
+              </article>
+            </a>
+          </li>
+        </ul>
+
+        <a href="#" class="section__lots-look-more-link">посмотреть больше</a>
+      </section>
+
+      <section id="section_about" class="section section__about">
+        <div href="#" class="section__about-logo">
+          <img
+            class="section__about-logo-image"
+            alt="изображение логотипа"
+            src="./images/logo-white.svg"
+          />
+        </div>
+
+        <div class="section__about-column">
+          <h2 class="section__about-title">Об аукционе</h2>
+          <div class="section__about-text">
+            <p>
+              Здесь вы не встретите очередное пафосное собрание невероятно
+              дорогого антиквариата. Наши лоты вообще не должны были попасть ни
+              на один аукцион. Потому что кому нужен дневник девочки-подростка
+              или картина, которую может нарисовать даже ребёнок? Кому нужны все
+              эти странные вещи, созданные любителями?
+            </p>
+            <p>
+              Слишком сложные или, наоборот, слишком простые. Опережающие своё
+              время. В пух и прах растерзанные критиками. Непринятые и
+              непонятые. Когда-то они казались просто неудачными. Но, несмотря
+              на критику, кажущуюся простоту или сложность, сейчас без этих
+              лотов невозможно представить современную культуру. Когда в эти
+              вещи не верил никто, продолжали верить их создатели. И сейчас эти
+              лоты стали культовыми.
+            </p>
+          </div>
+        </div>
+      </section>
+    </main>
+
+    <footer class="footer">
+      <div class="contacts-list">
+        <a href="tel:+99995555555" class="contacts-list-item"
+          >+9 999 555 5555</a
+        >
+        <br />
+        <a href="mailto:info@sobaka.ge" class="contacts-list-item"
+          >info@sobaka.ge</a
+        >
+        <br />
+        <address class="contacts-list-item contacts__address header__address">
+          наб. Принсенграхт 263-265, Амстердам
+        </address>
+      </div>
+
+      <nav class="menu">
+        <ul class="menu__links-list">
+          <li class="menu__links-list-item">
+            <a href="#" class="menu__link menu__link_active">главная</a>
+          </li>
+          <li class="menu__links-list-item">
+            <a href="#section_lots" class="menu__link">посмотреть лоты</a>
+          </li>
+          <li class="menu__links-list-item">
+            <a href="#section_about" class="menu__link">об аукционе</a>
+          </li>
+        </ul>
+      </nav>
+
+      <ul class="footer__social-list">
+        <li class="footer__social-list-item">
+          <a class="footer__social-link" href="#">
+            <img
+              class="footer__social-icon"
+              alt="иконка youtube"
+              src="./images/yt.svg"
+            />
+          </a>
+        </li>
+        <li class="footer__social-list-item">
+          <a class="footer__social-link" href="#">
+            <img
+              class="footer__social-icon"
+              alt="иконка vk"
+              src="./images/vk.svg"
+            />
+          </a>
+        </li>
+        <li class="footer__social-list-item">
+          <a class="footer__social-link" href="#">
+            <img
+              class="footer__social-icon"
+              alt="иконка pinterest"
+              src="./images/pinterest.svg"
+            />
+          </a>
+        </li>
+      </ul>
+    </footer>
+  </body>
 </html>
