--- a/slozhno-sosredotochitsya/index.html
+++ b/slozhno-sosredotochitsya/index.html
@@ -48,11 +48,11 @@
 
       <h1 class="heading header__title">no focus</h1>
 
-      <h2 class="heading title-decor header__subtitle">
+      <p class="heading title-decor header__subtitle">
         Что делать, когда не можешь делать ничего
         <br />
         Или почему нам так сложно сконцентрироваться, особенно когда очень надо
-      </h2>
+      </p>
     </header>
 
     <main class="content">
